k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  type: LoadBalancer
  selector:
    app: users-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
